--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #DATABASE
 spring.datasource.username=root
 spring.datasource.password=pass
-spring.datasource.url=jdbc:mysql://172.17.0.2:3306/mplatform?verifyServerCertificate=false&useSSL=false&requireSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://172.17.0.2:3306/mplatform?verifyServerCertificate=false&useSSL=false&requireSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT%2B8
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.show-sql = true
