--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-#DATABASE
-spring.datasource.username=root
-spring.datasource.password=pass
-spring.datasource.url=jdbc:mysql://172.17.0.2:3306/mplatform?verifyServerCertificate=false&useSSL=false&requireSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT%2B8
-spring.jpa.hibernate.ddl-auto=update
+# DATABASE
+# DATASOURCE is taken based on build profile from application-dev or appplicaiton-prod properties
 
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
@@ -13,5 +10,5 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 
 # Add this to serialize something https://stackoverflow.com/a/35497279
 spring.jackson.serialization.fail-on-empty-beans=false
-
 # security.basic.enabled=false
+spring.profiles.active=@env@
