--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 spring.jackson.serialization.fail-on-empty-beans=false
 # security.basic.enabled=false
 spring.profiles.active=@env@
+server.error.whitelabel.enabled=false
+# spring.mvc.throwExceptionIfNoHandlerFound=true
